--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -8,8 +9,9 @@
     content="BattleRoster is designed to streamline tabletop game management for both players and dungeon masters.">
   <meta name="keywords"
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
-  <title>BattleRoster | Account Management</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>BattleRoster | Game Roster management</title>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/index.html">
         <img class="home" src="assets/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
       </a>
 
@@ -34,22 +36,22 @@
       <div class="collapse navbar-collapse justify-content-end" id="navMenu">
         <ul class="navbar-nav flex-column align-items-start">
           <li class="nav-item">
-            <a class="nav-link" href="characters.html">
+            <a class="nav-link" href="/characters.html">
               <i class="fa-solid fa-user me-2 text-gold"></i>Characters
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="party.html">
+            <a class="nav-link" href="/party.html">
               <i class="fa-solid fa-users me-2 text-gold"></i>Party
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="signup-login.html">
+            <a class="nav-link" href="/signup-login.html">
               <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">
+            <a class="nav-link" href="/contact.html">
               <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
             </a>
           </li>
@@ -60,6 +62,32 @@
   <!-- Main content -->
   <div class="container-fluid bg-dark text-light py-5">
     <div class="row justify-content-center align-items-center">
+
+      <!-- Image -->
+      <div id= welcome-adventurer-image class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
+        <img src="assets/images/welcome-adventurer.png"
+          alt="A burly but friendly barkeep welcomes you to his tavern adventurer" class="img-fluid"
+          style="max-width: 100%; height: auto; object-fit: contain;">
+      </div>
+
+      <!-- Text box -->
+      <div id="welcome-adventurer-text" class="col-md-5">
+        <div class="p-5" style="background-color: rgba(69, 64, 61, 0.7);">
+          <h1><strong>Welcome, Adventurer!</strong></h1><br>
+          <p>
+            Step into the tavern and explore new adventures with fellow travellers.
+            Feel free to rest, take stock of your party and prepare for your next quest over a tankard or two of my
+            finest ale.<br>
+            <br>Select the <strong>Characters</strong> option from the menu to create or manage your rosters.<br>
+            <br>You can also team up with other adventurers with the <strong>Party</strong> tab and check their overall health or mana levels <br>
+            <br> We also cater for Dungeon Masters who can register straight away and keep a watch on the whole party during your quest via the <b>Sign-up/Log-in</b> menu tab.<br>
+            <br> To return to the bar, just click the <strong>BattleRoster Logo</strong>.<br>
+            <br>Any problems, or if that fella in the corner is bothering you, just let me know in the <strong>Contact</strong> tab.
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 
 
