--- a/templates/characters.html
+++ b/templates/characters.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -20,44 +21,42 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <!-- Logo -->
-            <a class="navbar-brand" href="/index.html">
-                <img class="home" src="static/images/battleroster-logo.png" alt="BattleRoster Logo"
-                    id="battleroster-logo">
+            <a class="navbar-brand" href="{% static 'index.html'%}">
+        <img class="home" src="{% static 'images/battleroster-logo.png'%}" alt="BattleRoster Logo" id="battleroster-logo">
+      </a>
+
+      <!-- Hamburger button -->
+      <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navbar items -->
+      <div class="collapse navbar-collapse justify-content-end" id="navMenu">
+        <ul class="navbar-nav flex-column align-items-start">
+          <li class="nav-item">
+            <a class="nav-link" href="{% static 'characters.html'%}">
+              <i class="fa-solid fa-user me-2 text-gold"></i>Characters
             </a>
-
-            <!-- Hamburger button -->
-            <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Navbar items -->
-            <div class="collapse navbar-collapse justify-content-end" id="navMenu">
-                <ul class="navbar-nav flex-column align-items-start">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/characters.html">
-                            <i class="fa-solid fa-user me-2 text-gold"></i>Characters
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/party.html">
-                            <i class="fa-solid fa-users me-2 text-gold"></i>Party
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signup-login.html">
-                            <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">
-                            <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% static 'party.html'%}">
+              <i class="fa-solid fa-users me-2 text-gold"></i>Party
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% static 'signup-login.html'%}">
+              <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% static 'contact.html'%}">
+              <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
+            </a>
+          </li>
+        </ul>
+      </div>
+  </nav>
 
     <!-- Main content -->
     <div class="container-fluid bg-dark text-light py-5">
