--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -9,7 +10,7 @@
   <meta name="keywords"
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
   <title>BattleRoster | Game Roster management</title>
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="{% static 'css/style.css'%}">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +21,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="index.html">
-        <img class="home" src="static/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
+      <a class="navbar-brand" href="{% static 'index.html'%}">
+        <img class="home" src="{% static 'images/battleroster-logo.png'%}" alt="BattleRoster Logo" id="battleroster-logo">
       </a>
 
       <!-- Hamburger button -->
@@ -34,22 +35,22 @@
       <div class="collapse navbar-collapse justify-content-end" id="navMenu">
         <ul class="navbar-nav flex-column align-items-start">
           <li class="nav-item">
-            <a class="nav-link" href="characters.html">
+            <a class="nav-link" href="{% static 'characters.html'%}">
               <i class="fa-solid fa-user me-2 text-gold"></i>Characters
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="party.html">
+            <a class="nav-link" href="{% static 'party.html'%}">
               <i class="fa-solid fa-users me-2 text-gold"></i>Party
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="signup-login.html">
+            <a class="nav-link" href="{% static 'signup-login.html'%}">
               <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">
+            <a class="nav-link" href="{% static 'contact.html'%}">
               <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
             </a>
           </li>
@@ -63,7 +64,7 @@
 
       <!-- Image -->
       <div id= welcome-adventurer-image class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
-        <img src="static/images/welcome-adventurer.png"
+        <img src="{% static 'images/welcome-adventurer.png'%}"
           alt="A burly but friendly barkeep welcomes you to his tavern adventurer" class="img-fluid"
           style="max-width: 100%; height: auto; object-fit: contain;">
       </div>
